# eanalytica-www

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  about.html  contact.html  eanalytica-www.cabal  index.html  logs.html  robots.txt  services.html  site.hs  stack.yaml
.circleci/: config.yml
css/: knitr.css  min.css  skeleton.css
files/: European_Electoral_Regions_December_2016_Ultra__Generalised_Clipped_Boundaries_in_Great_Britain.geojson  UK-Admissions.csv  cdnow_training.csv  code.js  contact.js  crossfilter.html  filtered.csv  ga-crossfilter.js  kwdperformance.csv  notebook1.html  sendgrid.html  titanic_test.csv  titanic_train.csv
js/: logs.js  r-tutorial.js  screens.js  tester.js
log_analysis/: default.nix  lambda_function.py  script.py
notebooks/: custom.tpl
notes/: 2019-08-22-1000-words.org  2019-08-29-the-curse-of-dimensionality.org  2019-09-12-the-rhythms-of-the-year.org  2019-09-19-the-book-of-why-review.org  2020-01-08-new-year-resolutions.org  2020-07-17-Dunning-Kruger.org
pages/: about.html  addon-privacy.md  case-studies.html  different-test-models.html  lines-of-best-fit.html  markov-chain-monte-carlo.html  multi-level-bidding.html  r-for-web-analysts.html  services.html  training.html
posts/: 2010-11-14-hello-world.html  2010-11-15-scrapers-are-an-advertisers-best-friend.html  2010-11-18-why-i-hate-pie-charts.html  2010-11-22-anchoring-sem-bias-series-part-1.html  2010-11-22-bias.html  2010-11-29-the-bandwagon-effect-sem-bias-series-part-2.html  2010-12-02-generating-a-sample-of-adwords-data-using-r.html  (+67 more)
(+23 files in other folders)
