name:                eanalytica-www
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/richardfergie/eanalytica-www
author:              Richard Fergie
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable eanalytica-www
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       filepath,
                       pandoc,
                       bytestring,
                       hjsmin
